# django-basic-template

./: .dockerignore  .env  .gitignore  manage.py  pyproject.toml
CoreApp/: asgi.py  settings.py  urls.py  wsgi.py
CoreApp/settings/: base.py  development.py
coreapp/: asgi.py  middleware.py  urls.py  wsgi.py
coreapp/settings/: base.py  development.py  production.py
